syntax = "proto3";
package evmos.fees.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "evmos/fees/v1/genesis.proto";
import "evmos/fees/v1/fees.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/evmos/evmos/v5/x/fees/types";

// Query defines the gRPC querier service.
service Query {
  // Fees retrieves all registered fees
  rpc Fees(QueryFeesRequest) returns (QueryFeesResponse) {
    option (google.api.http).get = "/evmos/fees/v1/fees";
  }

  // Fee retrieves a registered fee for a given contract address
  rpc Fee(QueryFeeRequest) returns (QueryFeeResponse) {
    option (google.api.http).get = "/evmos/fees/v1/fees/{contract_address}";
  }

  // Params retrieves the fees module params
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/evmos/fees/v1/params";
  }

  // DeployerFees retrieves all fees that a given deployer has registered
  rpc DeployerFees(QueryDeployerFeesRequest)
      returns (QueryDeployerFeesResponse) {
    option (google.api.http).get = "/evmos/fees/v1/fees/{deployer_address}";
  }

  // WithdrawerFees retrieves all fees with a given withdrawer address
  rpc WithdrawerFees(QueryWithdrawerFeesRequest)
      returns (QueryWithdrawerFeesResponse) {
    option (google.api.http).get = "/evmos/fees/v1/fees/{withdrawer_address}";
  }
}

// QueryFeesRequest is the request type for the Query/Fees RPC method.
message QueryFeesRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryFeesResponse is the response type for the Query/Fees RPC method.
message QueryFeesResponse {
  repeated Fee fees = 1 [ (gogoproto.nullable) = false ];
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryFeeRequest is the request type for the Query/Fee RPC method.
message QueryFeeRequest {
  // contract identifier is the hex contract address of a contract
  string contract_address = 1;
}

// QueryFeeResponse is the response type for the Query/Fee RPC method.
message QueryFeeResponse {
  Fee fee = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryDeployerFeesRequest is the request type for the Query/DeployerFees RPC
// method.
message QueryDeployerFeesRequest {
  // deployer bech32 address
  string deployer_address = 1;
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryDeployerFeesResponse is the response type for the Query/DeployerFees RPC
// method.
message QueryDeployerFeesResponse {
  repeated string contract_addresses = 1;
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}


// QueryWithdrawerFeesRequest is the request type for the Query/WithdrawerFees
// RPC method.
message QueryWithdrawerFeesRequest {
  // withdrawer bech32 address
  string withdrawer_address = 1;
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryWithdrawerFeesResponse is the response type for the Query/WithdrawerFees
// RPC method.
message QueryWithdrawerFeesResponse {
  repeated string contract_addresses = 1;
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
